--- a/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
@@ -115,7 +115,7 @@
     <!--/.Double navigation-->
 
     <!--Main Layout-->
-    <main class="pt-5 mx-lg-5">
+    <main class="mx-lg-5">
         @RenderBody()
     </main>
     <!--Main Layout-->
